Alignment fix for progressbar

--- a/src/resources/sass/components/_product-dreamlist.scss
+++ b/src/resources/sass/components/_product-dreamlist.scss
@@ -10,12 +10,12 @@
 
 	&__progress-wrapper {
 		position: relative;
-		padding-top: 20px;
+		padding-top: 30px;
 	}
 
 	&__tooltip {
 		position: absolute;
-		top: -10px;
+		top: 0;
 		left: 0;
 		padding: 6px 12px;
 		border-radius: 2em;
